updates for hbase 2.4 and spark 3.2